--- a/config/floris/config_floris_farm.yaml
+++ b/config/floris/config_floris_farm.yaml
@@ -1,97 +1,63 @@
 
-###
-# A name for this input file.
-# This is not currently only for the user's reference.
+# A name for this input file. This is not currently only for the user's reference.
 name: GCH
 
-###
-# A description of the contents of this input file.
-# This is not currently only for the user's reference.
+# A description of the contents of this input file. This is not currently only for the user's reference.
 description: Three turbines using Gauss Curl Hybrid model
 
-###
-# The earliest verion of FLORIS this input file supports.
-# This is not currently only for the user's reference.
+# The earliest verion of FLORIS this input file supports. This is not currently only for the user's reference.
 floris_version: v4
 
-###
 # Configure the logging level and where to show the logs.
 logging:
 
-  ###
   # Settings for logging to the console (i.e. terminal).
   console:
 
-    ###
     # Can be "true" or "false".
     enable: true
 
-    ###
-    # Set the severity to show output. Messages at this level or higher will be shown.
-    # Can be one of "CRITICAL", "ERROR", "WARNING", "INFO", "DEBUG".
+    # Set the severity to show output. Messages at this level or higher will be shown. Can be one of "CRITICAL", "ERROR", "WARNING", "INFO", "DEBUG".
     level: WARNING
 
-  ###
   # Settings for logging to a file.
   file:
 
-    ###
     # Can be "true" or "false".
     enable: false
 
-    ###
-    # Set the severity to show output. Messages at this level or higher will be shown.
-    # Can be one of "CRITICAL", "ERROR", "WARNING", "INFO", "DEBUG".
+    # Set the severity to show output. Messages at this level or higher will be shown. Can be one of "CRITICAL", "ERROR", "WARNING", "INFO", "DEBUG".
     level: WARNING
 
-###
 # Configure the solver for the type of simulation.
 solver:
 
-  ###
-  # Select the solver type.
-  # Can be one of: "turbine_grid", "flow_field_grid", "flow_field_planar_grid".
+  # Select the solver type. Can be one of: "turbine_grid", "flow_field_grid", "flow_field_planar_grid".
   type: turbine_grid
 
-  ###
   # Options for the turbine type selected above. See the solver documentation for available parameters.
   turbine_grid_points: 3
 
-###
 # Configure the turbine types and their placement within the wind farm.
 farm:
 
-  ###
-  # Coordinates for the turbine locations in the x-direction which is typically considered
-  # to be the streamwise direction (left, right) when the wind is out of the west.
-  # The order of the coordinates here corresponds to the index of the turbine in the primary
-  # data structures.
+  # Coordinates for the turbine locations in the x-direction which is typically considered to be the streamwise direction (left, right) when the wind is out of the west. The order of the coordinates here corresponds to the index of the turbine in the primary data structures.
+  # NOTE: This is initialized 'empty' in the config file, but the user must provide the turbine locations.
   layout_x:
-  - 0.0
+  - nan
 
-  ###
-  # Coordinates for the turbine locations in the y-direction which is typically considered
-  # to be the spanwise direction (up, down) when the wind is out of the west.
-  # The order of the coordinates here corresponds to the index of the turbine in the primary
-  # data structures.
+  # Coordinates for the turbine locations in the y-direction which is typically considered to be the spanwise direction (up, down) when the wind is out of the west. The order of the coordinates here corresponds to the index of the turbine in the primary data structures.
+  # NOTE: This is initialized 'empty' in the config file, but the user must provide the turbine locations.
   layout_y:
-  - 0.0
+  - nan
 
-  ###
-  # Listing of turbine types for placement at the x and y coordinates given above.
-  # The list length must be 1 or the same as ``layout_x`` and ``layout_y``. If it is a
-  # single value, all turbines are of the same type. Otherwise, the turbine type
-  # is mapped to the location at the same index in ``layout_x`` and ``layout_y``.
-  # The types can be either a name included in the turbine_library or
-  # a full definition of a wind turbine directly.
+  # Listing of turbine types for placement at the x and y coordinates given above. The list length must be 1 or the same as ``layout_x`` and ``layout_y``. If it is a single value, all turbines are of the same type. Otherwise, the turbine type is mapped to the location at the same index in ``layout_x`` and ``layout_y``. The types can be either a name included in the turbine_library or a full definition of a wind turbine directly.
   turbine_type:
-  - nrel_5MW
+  - 'nrel_5MW'
 
-###
 # Configure the atmospheric conditions.
 flow_field:
 
-  ###
   # Air density.
   air_density: 1.225
 
