Added wind rose, kind of broken

--- a/data/example_site_1/wind_rose.yaml
+++ b/data/example_site_1/wind_rose.yaml
@@ -1,6 +1,6 @@
 ---
 table:
-  cols: ['direction', 'wind_speed', 'frequency']
+  cols: ['direction', 'wind_speeds', 'frequency']
   units: ['degree', 'm/s', '-']
   rows:
     - [0, 0.5, 0.1]
