Made changes to requirement such that it works for Wolfram. And played around with geometric yaw from FLORIS, example script with single ambient condition

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 pipython
----
 numpy
 scipy
-yaml (maybe not needed?)
 pyyaml
 pandas
 matplotlib
 floris
-tqdm #(not strictly nesessary)
+tqdm  # (not strictly nesessary)
+pyqt6  # although, probably removed later
